@@ -459,3 +459,4 @@ N(OP_SetStartCity),
 N(OP_LoginUnknown1),
 N(OP_LoginUnknown2),
 N(OP_ItemViewUnknown),
+N(OP_GetGuildMOTDReply),
