@@ -103,6 +103,7 @@ OP_GuildPublicNote=0x17a2		# EQEmu - Doodman (found 8/26/05)
 OP_GuildDelete=0x5a4d			# EQEmu - Doodman (found 8/26/05
 OP_GuildInviteAccept=0x0179		# EQEmu - Doodman (found 8/26/05)
 OP_GetGuildMOTD=0x3246
+OP_GetGuildMOTDReply=0x5B14
 OP_GuildManageBanker=0x3d1e
 OP_GuildBank=0x0000
 #guild opcodes: 549F (clear guild?), 0x0695, 0x0AC0, 0x1864, 0x32cf, 0x4cc7,
