@@ -113,7 +113,8 @@ OP_ClientReady=0x2854			#Trevius 12/20/08
 OP_SetServerFilter=0x7038 		#SEQ 12/04/08
 
 #Guild Opcodes
-OP_GetGuildMOTD=0x3309			#SEQ 12/04/08
+OP_GetGuildMOTD=0x0b50			#
+OP_GetGuildMOTDReply=0x4289		#
 OP_GuildMemberUpdate=0x71D1		#SEQ 12/04/08
 OP_GuildInvite=0x430F			# or 0x5C2F
 OP_GuildMemberLevelUpdate=0x0000	#doesn't exist in this version
