@@ -92,6 +92,7 @@ OP_PetitionViewPetition=0x0000
 # some from client: 0x7825
 OP_ZoneGuildList=0x6957 (one entry too long)			# ShowEQ 10/27/05
 OP_GetGuildMOTD=0x7fec
+OP_GetGuildMOTDReply=0x3246
 OP_GuildMemberList=0x147d			# ShowEQ 10/27/05
 OP_GuildMemberUpdate=0x0f4d			# ShowEQ 10/27/05
 OP_GuildMemberLevelUpdate=0x0000		#dosent exist in this version
